crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__add_future_import_RUF013_5.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF013 [*] PEP 484 prohibits implicit `Optional`
 --> RUF013_5.py:3:12
  |
1 | # Annotated shorthand
2 |
3 | def f(arg: int @ "metadata" = None):  # RUF013
  |            ^^^^^^^^^^^^^^^^
4 |     pass
  |
help: Convert to `T | None`
1 | # Annotated shorthand
2 |
  - def f(arg: int @ "metadata" = None):  # RUF013
3 + from __future__ import annotations
4 + def f(arg: (int | None) @ "metadata" = None):  # RUF013
5 |     pass
6 |
7 | def f(arg: (int | None) @ "metadata" = None):
note: This is an unsafe fix and may change runtime behavior

RUF013 [*] PEP 484 prohibits implicit `Optional`
  --> RUF013_5.py:9:12
   |
 7 |     pass
 8 |
 9 | def f(arg: int @ (Metadata() | Other()) = None): # RUF013
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
10 |     pass
   |
help: Convert to `T | None`
1  | # Annotated shorthand
2  |
3  + from __future__ import annotations
4  | def f(arg: int @ "metadata" = None):  # RUF013
5  |     pass
6  |
7  | def f(arg: (int | None) @ "metadata" = None):
8  |     pass
9  |
   - def f(arg: int @ (Metadata() | Other()) = None): # RUF013
10 + def f(arg: (int | None) @ (Metadata() | Other()) = None): # RUF013
11 |     pass
12 |
13 | def f(arg: (int @ "m1") @ "m2" = None): # RUF013
note: This is an unsafe fix and may change runtime behavior

RUF013 [*] PEP 484 prohibits implicit `Optional`
  --> RUF013_5.py:12:12
   |
10 |     pass
11 |
12 | def f(arg: (int @ "m1") @ "m2" = None): # RUF013
   |            ^^^^^^^^^^^^^^^^^^^
13 |     pass
   |
help: Convert to `T | None`
1  | # Annotated shorthand
2  |
3  + from __future__ import annotations
4  | def f(arg: int @ "metadata" = None):  # RUF013
5  |     pass
6  |
--------------------------------------------------------------------------------
10 | def f(arg: int @ (Metadata() | Other()) = None): # RUF013
11 |     pass
12 |
   - def f(arg: (int @ "m1") @ "m2" = None): # RUF013
13 + def f(arg: (int | None) @ "m1" @ "m2" = None): # RUF013
14 |     pass
15 |
16 | def f(arg: int @ "m1" @ "m2" = None): # RUF013
note: This is an unsafe fix and may change runtime behavior

RUF013 [*] PEP 484 prohibits implicit `Optional`
  --> RUF013_5.py:15:12
   |
13 |     pass
14 |
15 | def f(arg: int @ "m1" @ "m2" = None): # RUF013
   |            ^^^^^^^^^^^^^^^^^
16 |     pass
   |
help: Convert to `T | None`
1  | # Annotated shorthand
2  |
3  + from __future__ import annotations
4  | def f(arg: int @ "metadata" = None):  # RUF013
5  |     pass
6  |
--------------------------------------------------------------------------------
13 | def f(arg: (int @ "m1") @ "m2" = None): # RUF013
14 |     pass
15 |
   - def f(arg: int @ "m1" @ "m2" = None): # RUF013
16 + def f(arg: (int | None) @ "m1" @ "m2" = None): # RUF013
17 |     pass
18 |
19 | def f(arg: (int | None) @ "m1" @ "m2" = None):
note: This is an unsafe fix and may change runtime behavior
